# expert-paper-extract

./: .gitignore  README.md  json_to_dataframe.ipynb  large_scale_extraction.py  pyproject.toml  textgrad_output_evaluation.ipynb  textgrad_training.ipynb
example_outputs/: optimized_prompt_Claude35(f)_Claude35(b).md  optimized_prompt_Claude35(f)_Claude35(b).txt
utilities/: Check_Composition_Consistency.py.py  pdf_token_counter.py
